--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container"> 
+		<div class="light" id="green">
+		</div>
+		<div class="light" id="yellow">
+		</div>
+	<div class="light" id="red">
+		</div>
+	</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
