--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container"> 
-		<div class="light" id="green">
+		<div class="light green" id="green">
 		</div>
-		<div class="light" id="yellow">
+		<div class="light yellow" id="yellow">
 		</div>
-	<div class="light" id="red">
+	<div class="light red" id="red">
 		</div>
 	</div>
 	</div>
